--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
@@ -27,8 +28,13 @@
     "express": "^4.16.4",
     "mongoose": "^5.3.14",
     "nedb": "^1.8.0",
+    "passport": "^0.4.0",
+    "passport-http": "^0.3.0",
+    "passport-localapikey": "0.0.4",
+    "passport-localapikey-update": "^0.6.0",
     "path": "^0.12.7",
     "rxjs": "~6.3.3",
+    "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
