--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "hystrixjs": "^0.2.0",
     "mongoose": "^5.3.14",
     "nedb": "^1.8.0",
     "passport": "^0.4.0",
