--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.5.4",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "hystrixjs": "^0.2.0",
     "mongoose": "^5.3.14",
     "nedb": "^1.8.0",
     "passport": "^0.4.0",
@@ -36,7 +37,7 @@
     "path": "^0.12.7",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.5",
-    "rxjs": "~6.3.3",
+    "rxjs": "^6.3.3",
     "urljoin": "^0.1.5",
     "uuid": "^3.3.2",
     "zone.js": "~0.8.26"
