--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@pact-foundation/pact-node": "^6.20.0",
     "bcrypt": "^3.0.2",
     "body-parser": "^1.18.3",
     "bootstrap": "^4.1.3",
@@ -30,6 +31,7 @@
     "hystrixjs": "^0.2.0",
     "mongoose": "^5.3.14",
     "nedb": "^1.8.0",
+    "pact": "^4.3.2",
     "passport": "^0.4.0",
     "passport-http": "^0.3.0",
     "passport-localapikey-update": "^0.6.0",
@@ -51,6 +53,7 @@
     "@types/node": "~8.9.4",
     "chai": "^4.2.0",
     "chai-http": "^4.2.0",
+    "chai-things": "^0.2.0",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
@@ -62,6 +65,7 @@
     "mocha": "^5.2.0",
     "protractor": "~5.4.0",
     "sinon": "^7.1.1",
+    "sinon-chai": "^3.3.0",
     "sinon-mongoose": "^2.2.1",
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
